--- a/styles.css
+++ b/styles.css
@@ -7,16 +7,16 @@
 
 
 :root {
-    --cor-de-fundo: #EBECEE;
-    --branco: #FFFFFF;
-    --laranja: #EB9B00;
+    --cor-de-fundo: #FF0000;
+    --branco: #FFFF00;
+    --laranja: #4B0082;
     --azul-degrade: linear-gradient(97.54deg, #002f52 35.49%, #326589 165.37%);
     --fonte-principal: "Poppins";
-    --azul: #002F52;
+    --azul: #FF1493;
     --fonte-secundario: "Josefin Sans";
-    --preto: #000000;
-    --cinza: #474646;
-    --cinza-claro: #858585;
+    --preto: #00FF00;
+    --cinza: #00FF7F;
+    --cinza-claro: #D2691E;
 }
 
 body {
